--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href="main.css">
         <title>biglietteria</title>
     </head>
@@ -10,20 +19,88 @@
 
         <h1 id="inserzione">calcola il prezzo del tuo biglietto</h1>
         <!-- parte input!!!!!!!!!!!! -->
-        <div class="container-flex">
-            <input id="name" type="text" name="" value="">
-            <input id="km" type="text" name="" value="">
-            <input id="eta" type="text" name="" value="">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="selettori">
+
+                    <div class="col-lg-4">
+
+
+                        <input id="name" type="text" name="" value="">
+                    </div>
+                    <div class="col-lg-4">
+                        <input id="km" type="text" name="" value="">
+                    </div>
+                    <div class="col-lg-4">
+                        <input id="eta" type="text" name="" value="">
+                    </div>
+
+                </div>
+
+                </div>
+            <div class="col-lg-12">
+
+
+                <div class="col-lg-offset-5 ">
 
             <button id="genera" type="button" name="button">Genera</button>
+            </div>
+            <div class="col-lg-3">
 
             <button id="cancella" type="button" name="button">Cancella</button>
+            </div>
+
+        </div>
+
+        <div class="col-lg-12">
+
+
+                <h2 >
+                    il tuo biglietto
+                </h2>
 
         </div>
         <!-- parte output!!!!!!!!! -->
-        <div class="container-flex">
+
+        <div class="col-lg-12">
+
+            <div class="col-lg-3">
+            <h3> <b>dettaglio passeggeri</b></h3>
+            </div>
+
+            </div>
+
+            <div class="col-lg-2">
+                <h4 > <b> nome passeggero</b> <span id="nome"></span> </h4>
+
+            </div>
+            <div class="col-lg-2">
+                <h4> <b> offerta</b></h4>
+                <span></span>
 
 
+            </div>
+            <div class="col-lg-2">
+                <h4> <b>carrozza</b></h4>
+                <span>5</span>
+
+            </div>
+            <div class="col-lg-2">
+                <h4> <b>codice cp</b></h4>
+                <span>93568</span>
+
+            </div>
+            <div class="col-lg-2">
+                <h4> <b>costo biglietto</b></h4>
+                <span></span>
+
+            </div>
+
+          </div>
         </div>
 
         <script type="text/javascript" src = "my.js">
