--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 
         <!-- Latest compiled and minified JavaScript -->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+            <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script> -->
 
         <link rel="stylesheet" href="main.css">
         <title>biglietteria</title>
@@ -28,15 +28,16 @@
                     <div class="selettori">
 
                     <div class="col-lg-4">
-
-
-                        <input id="name" type="text" name="" value="">
+                        <h4>nome e cognome</h4>
+                        <input id="name" type="text" name="name" value="">
                     </div>
                     <div class="col-lg-4">
-                        <input id="km" type="text" name="" value="">
+                        <h4>km da percorrere</h4>
+                        <input id="km" type="text" name="km" value="">
                     </div>
                     <div class="col-lg-4">
-                        <input id="eta" type="text" name="" value="">
+                        <h4>inserire eta</h4>
+                        <input id="eta" type="text" name="eta" value="">
                     </div>
 
                 </div>
@@ -75,7 +76,7 @@
             </div>
 
             <div class="col-lg-2">
-                <h4 > <b> nome passeggero</b> <span id="nome"></span> </h4>
+                <h4 id="passeggero" > <b> nome passeggero</b> <span ></span> </h4>
 
             </div>
             <div class="col-lg-2">
