--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="selettori">
 
                     <div class="col-lg-4">
-                        <h4>nome e cognome</h4>
+                        <h4 >nome e cognome</h4>
                         <input id="name" type="text" name="name" value="">
                     </div>
                     <div class="col-lg-4">
@@ -48,11 +48,11 @@
 
                 <div class="col-lg-offset-5 ">
 
-            <button id="genera" type="button" name="button">Genera</button>
+            <button  type="button" name="button" id="genera">Genera</button>
             </div>
             <div class="col-lg-3">
 
-            <button id="cancella" type="button" name="button">Cancella</button>
+            <button  type="button" name="button" id="cancella">Cancella</button>
             </div>
 
         </div>
@@ -67,7 +67,11 @@
         </div>
         <!-- parte output!!!!!!!!! -->
 
+
+
+
         <div class="col-lg-12">
+
 
             <div class="col-lg-3">
             <h3> <b>dettaglio passeggeri</b></h3>
@@ -76,12 +80,12 @@
             </div>
 
             <div class="col-lg-2">
-                <h4 id="passeggero" > <b> nome passeggero</b> <span ></span> </h4>
+                <h4  > <b> nome passeggero</b> <span id="passeggero" ></span> </h4>
 
             </div>
             <div class="col-lg-2">
                 <h4> <b> offerta</b></h4>
-                <span></span>
+                <span id="offerta"></span>
 
 
             </div>
@@ -95,11 +99,12 @@
                 <span>93568</span>
 
             </div>
-            <div class="col-lg-2">
+              <div class="col-lg-2">
                 <h4> <b>costo biglietto</b></h4>
-                <span></span>
+                <span id="prezzo"></span>
 
-            </div>
+               </div>
+
 
           </div>
         </div>
