--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
             </div>
             <div class="col-lg-2">
                 <h4> <b>carrozza</b></h4>
-                <span>5</span>
+                <span id="carrozza"></span>
 
             </div>
             <div class="col-lg-2">
                 <h4> <b>codice cp</b></h4>
-                <span>93568</span>
+                <span >93568</span>
 
             </div>
               <div class="col-lg-2">
