prezzo adeguato ai sconti ok

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="col-lg-2">
                 <h4> <b>codice cp</b></h4>
-                <span >93568</span>
+                <span id="cp"></span>
 
             </div>
               <div class="col-lg-2">
