--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </div>
 
                 </div>
+
             <div class="col-lg-12">
 
 
@@ -56,28 +57,36 @@
             </div>
 
         </div>
-
-        <div class="col-lg-12">
-
-
-                <h2 >
-                    il tuo biglietto
-                </h2>
+            </div>
 
         </div>
         <!-- parte output!!!!!!!!! -->
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-lg-12">
 
 
+            <h2 >il tuo biglietto</h2>
+        </div>
+            </div>
 
 
         <div class="col-lg-12">
+                <div class="titolo">
 
+                <h3> <b>dettaglio passeggeri</b></h3>
 
-            <div class="col-lg-3">
-            <h3> <b>dettaglio passeggeri</b></h3>
+                </div>
+
             </div>
+            <div class="container">
 
-            </div>
+                <div class="row">
+
+            <div class="selettori2">
+
 
             <div class="col-lg-2">
                 <h4  > <b> nome passeggero</b> <span id="passeggero" ></span> </h4>
@@ -104,6 +113,9 @@
                 <span id="prezzo"></span>
 
                </div>
+
+
+           </div>
 
 
           </div>
