--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
                 <div class="col-lg-12">
 
 
-            <h2 >il tuo biglietto</h2>
+            <h2 id="sparire" > <b>il tuo biglietto</b> </h2>
         </div>
+            </div>
             </div>
 
 
         <div class="col-lg-12">
-                <div class="titolo">
+                <div id="sparire2" class="titolo">
 
                 <h3> <b>dettaglio passeggeri</b></h3>
 
@@ -85,7 +86,7 @@
 
                 <div class="row">
 
-            <div class="selettori2">
+            <div id="sparire3" class="selettori2">
 
 
             <div class="col-lg-2">
